# PI

./: README.md
sistema_logistica/: README.md  db.sqlite3  pyproject.toml  requirements.txt
sistema_logistica/config/: settings.py
sistema_logistica/core/: urls.py  views.py
sistema_logistica/core/templates/core/: lista_entregas.html
