[project]
name = "sistema-logistica"
version = "0.1.0"
description = ""
authors = [
    {name = "pablosousaa",email = "pabloantonio.msms@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.9,<6.0.0)"
]

[tool.poetry]
packages = [{include = "sistema_logistica", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
